public interface ITransport
{
  void GetTravelTime();
}