public class Bus : ITransport
{
  public void GetTravelTime() => Console.WriteLine("Resan med buss tar 45 minuter.");
}