public class Bike : ITransport
{
  public void GetTravelTime() => Console.WriteLine("Resan med cykel tar 60 minuter.");
}