public class Car : ITransport
{
  public void GetTravelTime() => Console.WriteLine("Resan med bil tar 30 minuter.");
}